# Auto-Docs

./: .gitattributes  .gitignore  AutoDocs.spec  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml
autodocs/: document_service.py  main.py  print_service.py  sql_import_service.py  storage.py
docs/: DEVELOPMENT.md  RELEASE.md
packaging/: build_windows.ps1  windows_version_info.txt
scripts/: create_app_icon.py  create_project_branding.py  create_test_templates.py
test_templates/: 01_hop_dong_mua_ban.docx  02_bao_gia_san_pham.docx  03_bien_ban_cuoc_hop.docx  04_quyet_dinh_nhan_su.docx  05_thu_moi_su_kien.docx  06_mau_kiem_thu_da_dang.docx
