[project]
name = "autodocs"
version = "1.0.0"
description = "Offline Windows desktop app for generating documents from Word templates."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "TSam" }
]
dependencies = [
  "PySide6>=6.7",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "pywin32>=306; platform_system == 'Windows'",
  "pyodbc>=5.1",
  "PyMuPDF>=1.24",
  "Pillow>=10.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[tool.pyinstaller]
spec = "AutoDocs.spec"
